adds DM section and proofreads it partly

--- a/report/report.tex
+++ b/report/report.tex
@@ -271,12 +271,40 @@ This diagram again shows the intents and how much more accurate this model is co
 \subsection{Dialogue Management}
 \label{subsec:dialogue_management}
 
-\begin{itemize}
-  \item Clearly explain 2 parts (State-Machine and NN)
-  \item State-Machine: high-level control, handles things we have no data for, eg. pauses
-  \item NN: Report on differences between RNN and LSTM and why the choice for the LSTM has been made
-  \item (optional): Comparison to RASA rule-policy
-\end{itemize}
+The dialogue manager is composed of two components: a state machine and a Pytorch model running on top of it. This approach was chosen because, despite involving a conversation which requires intelligent behaviour from the dialogue manager, the game itself is defined by a rigid set of rules. There are ten questions, the conversation must see the system pass from each question to the next, and the game must end at a specified time. Running the model on top of the hard-coded logic of the state machine can ensure that this movement from state to state is observed. \todo{reword "running the model on top of"}
+
+\subsubsection{Neural Network - Cale}
+\label{subsec:nn}
+The neural network model was designed to manage dialogue for a three-person conversation. To do this, it has two inputs, the intent (decided by the NLU) and the user ID (user 1, user 2 or host). These inputs were both one-hot encoded, the intent being a vector of size 14 (one for each intent) and the user number being a vector of size 3. These two vectors were concatenated to produce an input vector of size 17. The network was then trained to predict the host's response for a given intent and user in a sequence. This output is a vector of size 5, one for each of the 4 system intents plus one for \verb|no response|.
+
+The model was trained using the dataset which we had originally labelled for NLU purposes. This provided human labelled sequences of intents and user IDs for each question. Each question would have its intents and user IDs input into the network sequentially, with the model's memory being cleared after every question. Every output from the system which is not \verb|no response| would be input back into the network, allowing for the system to speak multiple lines of dialogue in succession. At the start of each question, the system is set up by first inputting the host having given the \verb|question| intent, to which it will always output the \verb|options| intent. This is required since every question in the training data is started by the host asking the question, then giving the options for the question.
+
+The primary difficulty of training was the imbalance in the dataset. Since most of the time, the host will be only listening, \verb|no response| is by far the most common output. This means that having the output as a single SoftMax vector of size 5 would be difficult, as the model would quickly learn to always output \verb|no response|. Traditional undersampling and oversampling methods would also be difficult to make use of, since the \verb|no response| output exists as part of a real conversation, which must be fed into the network sequentially. For example, uncommon system responses could not be oversampled, as they exist as part of a real question, most of which is often filled with \verb|no response| from the host. Artificially increasing their frequency could not be done without altering the questions, which would diminish the integrity of the data.
+
+To overcome this, a separate Sigmoid output was used for \verb|no response| (as shown in the diagrams above). To train this model, whenever \verb|no response| from the host was expected, the loss from the SoftMax vector was set to zero, otherwise L2 loss was used for all outputs. The system was implemented in PyTorch, with the model being trained for 30 epochs with a learning rate of 5x10-4.
+
+In future, this architecture could be used for handling multi-person dialogues with more intents or more users by simply scaling the inputs, outputs, and hidden layers accordingly. The model could also be altered to allow for more inputs such as pauses or other non-verbal cues.
+
+\subsubsection{Dialogue Manager - Jack}
+\label{subsec:dm}
+
+The intent detected by the NLU system from a user's utterance is passed to the dialogue manager from where it is input into the PyTorch model. The model then decides on an appropriate action. The state machine checks if the output from the PyTorch model represents a sensible action. In case there are logical errors, the output will be overridden. For example, if the NLU detects that the user intends to confirm final answer, but no answer has yet been given, the PyTorch model may nonetheless decide on \verb|accept-answer|. As no answer has been given set, the state machine will overwrite this output.
+
+Another reason for using the state machine was the limited transcript data. The PyTorch model learned off of the transcript data. There are user intents found throughout the transcripts, followed by a certain action (or no action). Therefore, the PyTorch model depended on a sufficient amount of transcript data to function adequately. Using a state machine allowed us to program explicitly how the chatbot is meant to respond to user intents, thus eliminating the need for so more transcript data.
+
+The state machine's configuration is defined inside a JSON file \todo{insert Jack's figure}. When the action decided by the chatbot is overridden by the state machine, it is done according to this configuration. The action chosen by the state machine is a string of JavaScript code, and is found in the configuration object \verb|flow| at \verb|flow[state][intent]|, where \verb|state| is the current state of the machine and \verb|intent| is the name of the most recent user intent.
+
+Throughout the course of a game, the dialogue manager stores relevant values, such as answers offered by the user, and these values also influence the behaviour of the state machine. An example of this can be found inside the `seek-confirmation` state when the host asks the users if they would like to lock in an answer suggested by them. If a user responds by rejecting the answer they had just given, then the host will check to see if the answer they are rejecting is the same as the answer that they had just offered. If it is, then the host will assume that they are not wishing to lock in that answer. However, if the answer being rejected by the user is another one, then the host will assume that they do indeed wish to proceed with their offered answer.
+
+A more secure approach to this situation would involve taking a record of all the answers ruled out by the users. The host would then lock in a final answer after a rejected answer if and only if the other two possible answers had also been previously rejected. We would take in a future implementation as it would reduce the risk of the host accepting answers while the users are still deciding.
+
+\subsubsection{Xander}
+\label{subsec:xander}
+Recurrent Neural Networks and Long-Short Term Memory are the two types of Neural Network that have been used throughout the project due the fact that they use context when calculating the outcomes of the Neural Network. A Neural Network has multiple hidden layers each has its own weights and bias. This causes each layer has this they act independently, which is not helpful when trying to identify a pattern between the successive inputs. RNN will have the same weights and bias for the hidden layers, but will supply the a state to each neuron. This state is then used to link the next input to form the next state.
+However, the issue with this is when you have very long pieces of data, especially when referring to dialogue. If there is a long sentence the RNN must do a lot of recursions in order to process every single word or rather state. Then there is the problem of vanishing gradient although this we are less observable throughout our project as the scope of our project was not that large. This is a known and is Long-Short Term Memory, a type of Recurrent Neural Network has been developed.
+Long-Short Term Memory, even as shown in our project has faster processing speeds. This is because it has the means of forgetting by identifying if a piece of input data changes, instead of doing what a normal RRN does and constantly goes back regardless of what the context of the data being given is.
+When deciding how to do the dialogue management when building the chatbot when were considering using the RASA Dialogue Management but had to move away from the toolkit. The reason behind this is although the sophisticated system in place with pre-existing system, using the inbuilt stories and intents within the system, however it was not built in with multiple users in mind. To achieve multi-person dialogue with more than just the chatbot and a single individual would not be able to use Rasa. Rasa was not built with multiple people in mind. This meant there was only the intent and response when developing the dialogue manager.
+For it to function it would have to be heavily worked on just to allow for the multiple people to be used. This ignores any issues with developing the dialogue manger that would take place and would be compounded. To use RASA it would have to train on each epoch twice one for each user to prevent it from falling into a pattern based on how second users may act within the training data. Every intent would need to be created twice, once for each user. Alongside the problems once where the Diarization trying to identify the user there would be issues with the trying to work out which intent belong to which user and since they have both had the same set of training data this could cause a great deal of confusion within the system making it next to impossible to separate the different users. This is why we decided to go with building our own system as this way we could alter the fundamental tools that RASA gives us, obviously the main tools would not have been as robust as RASA as that has an entire development team behind it but it is simple unable to achieve what we required from our task at hand.
 
 \subsection{Natural Language Generation}
 \label{subsec:nlg}
